# VVP

./: .dockerignore  .gitignore  .mcp.json  ALGORITHMS.md  ARCHITECTURE.md  CHANGES.md  CLAUDE.md  DOSSIER_SIMPLIFICATION_AUDIT.md  Dockerfile  E2E_TEST.md  FINDINGS_Sprint78.md  FINDINGS_Sprint86.md  LICENSE  PLAN.md  PLAN_Sprint52.md  PLAN_Sprint54.md  PLAN_Sprint63.md  PLAN_Sprint76.md  PLAN_Sprint86.md  README.md  REVIEW.md  REVIEW_Sprint86.md  SPEC_COMPLIANCE.md  SPRINTS.md  SUPPORT.md  SYSTEM.md  TASK_health_check_validation.md  docker-compose.yml  fic.json  pyproject.toml  pytest.ini  run_server.sh
common/: CLAUDE.md  pyproject.toml
common/common/vvp/: http_client.py  logo_hash.py  said_validation.py  timing.py  url_validation.py
common/common/vvp/canonical/: keri_canonical.py
common/common/vvp/cli/: __init__.py  acdc.py  adapters.py  cesr.py  dossier.py  graph.py  identity.py  jwt.py  kel.py  main.py  output.py  said.py  utils.py
common/common/vvp/dossier/: __init__.py  cache.py  config.py  fetch.py
common/common/vvp/keri/: tel_client.py
common/common/vvp/mcp/: __init__.py  issuer_client.py  issuer_tools.py  server.py  tool_helpers.py
common/common/vvp/models/: __init__.py  acdc.py  keri_agent.py  witness.py
common/common/vvp/schema/: registry.py
common/common/vvp/sip/: builder.py  models.py  transport.py
common/common/vvp/vcard/: __init__.py  brand.py  comparison.py  parser.py
common/tests/vvp/: test_logo_hash.py  test_schema_governance.py
common/tests/vvp/sip/: test_builder.py
common/tests/vvp/vcard/: test_brand.py  test_comparison.py  test_parser.py
services/issuer/: CLAUDE.md  Dockerfile  pyproject.toml
services/issuer/app/: config.py  keri_client.py  main.py
services/issuer/app/api/: admin.py  auth.py  credential.py  dashboard.py  dossier.py  health.py  identity.py  models.py  org_api_key.py  organization.py  pbx.py  registry.py  schema.py  tel.py  tn.py  user.py  vetter_certification.py  vvp.py
services/issuer/app/auth/: __init__.py  api_key.py  oauth.py  session.py  users.py
services/issuer/app/core/: event_loop_monitor.py
services/issuer/app/db/: models.py  session.py
services/issuer/app/dossier/: __init__.py  builder.py  formats.py
services/issuer/app/keri/: exceptions.py  identity.py  issuer.py  registry.py
services/issuer/app/middleware/: __init__.py  pbx_cors.py
services/issuer/app/org/: __init__.py  mock_vlei.py  trust_anchors.py
services/issuer/app/pbx/: __init__.py  deploy.py  dialplan.py
services/issuer/app/schema/: __init__.py  said.py
services/issuer/app/tn/: lookup.py
services/issuer/app/vetter/: constraints.py  service.py
services/issuer/app/vvp/: __init__.py  attestation_cache.py  card.py  constraint_cache.py  dossier_service.py  passport.py  vcard_builder.py
services/issuer/config/: api_keys.json  users.json  witnesses-azure.json
services/issuer/scripts/: verify-azure-deployment.sh
services/issuer/tests/: conftest.py  test_agent_contract.py  test_agent_outage_503.py  test_attestation_cache.py  test_auth.py  test_card.py  test_cleanup.py  test_cleanup_metadata.py  test_credential.py  test_credential_pagination.py  test_dashboard.py  test_dossier.py  test_dossier_parity.py  test_dossier_readiness.py  test_dossier_revocation.py  test_event_loop_monitor.py  test_health.py  test_identity.py  test_identity_header.py  test_import.py  test_keri_client.py  test_no_keripy.py  test_oauth.py  test_org_switching.py  test_org_type.py  test_passport_parity.py  test_pbx_config.py  test_pbx_cors.py  test_pbx_facade.py  test_persistence.py  test_phone_route.py  test_postgres_session_store.py  test_registry.py  test_said_parity.py  test_schema.py  test_session.py  test_sprint62_constraints.py  test_sprint63_wizard.py  test_tel_proxy.py  test_tn_mapping.py  (+4 more)
services/issuer/web/: 404.html  admin.html  benchmarks.html  create.html  credentials.html  dashboard.html  dossier.html  help.html  index.html  organization-detail.html  organizations.html  pbx.html  profile.html  registry.html  schemas.html  shared.js  styles.css  tn-mappings.html  users.html  vetter.html  vvp.html  walkthrough.html
services/issuer/web/phone/: index.html  manifest.json  sw.js
services/keri-agent/: Dockerfile  pyproject.toml
services/keri-agent/app/: auth.py  config.py  main.py  mock_vlei.py
services/keri-agent/app/api/: admin.py  bootstrap.py  credential.py  dossier.py  health.py  identity.py  registry.py  seeds.py  tel.py  vvp.py
services/keri-agent/app/db/: __init__.py  models.py  (+1 more)
services/keri-agent/config/: witnesses.json
services/keri-agent/scripts/: run-tests.sh
services/keri-agent/tests/: conftest.py  test_admin_cleanup.py  test_auth.py  test_bootstrap.py  test_bulk_cleanup.py  test_credential.py  test_dossier.py  test_health.py  test_identity.py  test_readiness.py  test_registry.py  test_seed_export.py  test_seed_store.py  test_seed_store_delete.py  test_state_builder.py  test_tel_api.py  test_vvp.py  test_witness_monitor.py  test_witness_receipt_distribution.py  test_witness_recovery.py  test_witness_retry.py
(+368 files in other folders)
