[project]
name = "vvp-common"
version = "0.1.0"
description = "Shared code between VVP verifier and issuer services"
requires-python = ">=3.12"
dependencies = [
    "blake3>=0.3.0",
]

[project.optional-dependencies]
cli = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "vvp-verifier",  # Required for parsing functions
]
mcp = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",  # Required for issuer API calls
    "vvp-verifier",  # Required for parsing functions
]

[project.scripts]
vvp = "common.vvp.cli.main:app"
vvp-mcp = "common.vvp.mcp.server:main"

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["common*"]
